// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button empty render 1`] = `
<button
  className="button button_primary"
  onClick={null}
  title={null}
  type="button"
/>
`;

exports[`Button should render with primary property 1`] = `
<button
  className="button button_primary"
  onClick={null}
  title={null}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with secondary property 1`] = `
<button
  className="button button_primary button_secondary"
  onClick={null}
  title={null}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with text 1`] = `
<button
  className="button button_primary"
  onClick={null}
  title={null}
  type="button"
>
  Some text
</button>
`;

exports[`Button should render with title 1`] = `
<button
  className="button button_primary"
  onClick={null}
  title="some title"
  type="button"
>
  Some text
</button>
`;
